Fix split pane overflow issue

--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.scss
@@ -2,12 +2,13 @@
 
 $card-body-padding: 1.25rem;
 $navbar-height: 57px;
+$breadcrumbs-height: 41px;
 $footer-height: 31px;
 
 .plagiarism-inspector {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 2 * #{$card-body-padding} - #{$navbar-height} - #{$footer-height});
+    height: calc(100vh - 2 * #{$card-body-padding} - #{$navbar-height} - #{$footer-height} - #{$breadcrumbs-height});
     // JHipster's .card-body has default padding of 1.25
     margin: -1.25rem;
 
