--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.scss
@@ -15,6 +15,5 @@
     .plagiarism-split-pane {
         padding-top: 30px;
         position: relative;
-        overflow-y: auto;
     }
 }
