--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/text-submission-viewer/text-submission-viewer.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/text-submission-viewer/text-submission-viewer.component.scss
@@ -1,4 +1,6 @@
 .text-submission-viewer {
+    height: 100%;
+    overflow-y: auto;
     padding: 0.5rem;
 }
 
